Added Bg Color to the Help.

--- a/qropper.html
+++ b/qropper.html
@@ -77,7 +77,8 @@ ENTER  =  Apply the crop.
                 <pre>
 Usage:
 * Copy an image.
-* Go to Qropper and paste it (ctrl+v).
+* Go to Qropper and set the background color.
+* Paste the image (ctrl+v).
 
 Or...
 
