More Help Updates.

--- a/qropper.html
+++ b/qropper.html
@@ -80,6 +80,9 @@ Usage:
 * Go to Qropper and set the background color.
 * Paste the image (ctrl+v).
 
+(note: if hotkeys don't work click on
+the pasted image first, or hit Enter)
+
 Or...
 
 * Download image file.
