Defaults to blurred background now.

--- a/qropper.html
+++ b/qropper.html
@@ -113,7 +113,7 @@ c      =  Crop
     let originalImage = null;
     let cropMode = false;
     let cropRect = null;
-    let blurredBackground = false;
+    let blurredBackground = true;
 
     function toggleBackgroundMode() {
         blurredBackground = !blurredBackground;
